calico-enterprise_versioned_docs/version-3.15/getting-started/install-on-clusters/kubernetes/helm.mdx
---
description: Install Calico Enterprise using Helm application package manager.
---

import variables from '@site/calico-enterprise_versioned_docs/version-3.15/variables';

# Helm

## Big picture

Install {variables.prodname} on a Kubernetes cluster using Helm 3.

## Value

Helm charts are a way to package up an application for Kubernetes (similar to `apt` or `yum` for operating systems). Helm is also used by tools like ArgoCD to manage applications in a cluster, taking care of install, upgrade (and rollback if needed), etc.

## Before you begin

**Required**

- Install Helm 3
- `kubeconfig` is configured to work with your cluster (check by running `kubectl get nodes`)
- [Credentials for the Tigera private registry and a license key](../calico-enterprise.mdx)

**Not Supported**

- Multi-cluster management (mcm)

<!-- TODO(dimitrin) Add supported cluster type after verification

management and managed clusters -->

## Concepts

### Operator based installation

In this guide, you install the Tigera Calico operator and custom resource definitions using the Helm 3 chart. The Tigera operator provides lifecycle management for {variables.prodname} exposed via the Kubernetes API defined as a custom resource definition.

## How to

### Download the Helm chart

<GettingStartedInstallOnClustersKubernetesHelm />

## Next steps

**Multicluster Management**

- [Create a {variables.prodname} management cluster](../../../multicluster/create-a-management-cluster.mdx)
- [Create a {variables.prodname} managed cluster](../../../multicluster/create-a-managed-cluster.mdx)

**Recommended**

- [Configure access to {variables.prodname} Manager UI](../../../operations/cnx/access-the-manager.mdx)
- [Authentication quickstart](../../../operations/cnx/authentication-quickstart.mdx)
- [Configure your own identity provider](../../../operations/cnx/configure-identity-provider.mdx)

**Recommended - Networking**

- The default networking is IP in IP encapsulation using BGP routing. For all networking options, see [Determine best networking option](../../../networking/determine-best-networking.mdx).

**Recommended - Security**

- [Get started with {variables.prodname} tiered network policy](../../../network-policy/policy-tiers/tiered-policy.mdx)
