calico-enterprise_versioned_docs/version-3.18/getting-started/install-on-clusters/kubernetes/helm.mdx
---
description: Install Calico Enterprise using Helm application package manager.
---

import variables from '@site/calico-enterprise_versioned_docs/version-3.18/variables';

# Helm

import CodeBlock from '@theme/CodeBlock';

## Big picture

Install {variables.prodname} on a Kubernetes cluster using Helm 3.

## Value

Helm charts are a way to package up an application for Kubernetes (similar to `apt` or `yum` for operating systems). Helm is also used by tools like ArgoCD to manage applications in a cluster, taking care of install, upgrade (and rollback if needed), etc.

## Before you begin

**Required**

- Install Helm 3
- `kubeconfig` is configured to work with your cluster (check by running `kubectl get nodes`)
- [Credentials for the Tigera private registry and a license key](../calico-enterprise.mdx)

## Concepts

### Operator based installation

In this guide, you install the Tigera Calico operator and custom resource definitions using the Helm 3 chart. The Tigera operator provides lifecycle management for {variables.prodname} exposed via the Kubernetes API defined as a custom resource definition.

## How to

### Download the Helm chart

  <CodeBlock language='bash'>
     \{'\{variables.version}' === 'master'
       ? `helm repo add tigera gs://tigera-helm-charts`
       : `curl -O -L https://downloads.tigera.io/ee/charts/tigera-operator-\{variables.chart_version_name}.tgz`}
  </CodeBlock>

### Customize the Helm chart

If you are installing on a cluster installed by EKS, GKE, AKS or Mirantis Kubernetes Engine (MKE), or you need to customize TLS certificates, you **must** customize this Helm chart by creating a `values.yaml` file. Otherwise, you can skip this step.

1. If you are installing on a cluster installed by EKS, GKE, AKS or Mirantis Kubernetes Engine (MKE), set the `kubernetesProvider` as described in the [Installation reference](../../../reference/installation/api.mdx#operator.tigera.io/v1.Provider). For example:

  ```bash
  echo '{ installation: {kubernetesProvider: EKS }}' > values.yaml
  ```

   For Azure AKS cluster with no Kubernetes CNI pre-installed, create `values.yaml` with the following command:

  ```yaml
  cat > values.yaml <<EOF
  installation:
    kubernetesProvider: AKS
    cni:
      type: Calico
    calicoNetwork:
      bgp: Disabled
      ipPools:
      - cidr: 10.244.0.0/16
        encapsulation: VXLAN
  EOF
  ```

1. Add any other customizations you require to `values.yaml`. To see values that can be customized in the chart, see the [helm docs](https://helm.sh/docs/) or run the following command:

  <CodeBlock language='bash'>
     \{'\{variables.version}' === 'master'
       ? `helm show values tigera/tigera-operator --version v0.0`
       : `helm show values ./tigera-operator-\{variables.chart_version_name}.tgz`}
  </CodeBlock>

### Install {variables.prodname}

Standalone is a standard Kubernetes cluster.

To install a standard {variables.prodname} cluster with Helm:

1. [Configure a storage class for Calico Enterprise](../../../operations/logstorage/create-storage).

1. Install the Tigera {variables.prodname} operator and custom resource definitions using the Helm 3 chart:

  <CodeBlock language='bash'>
     {'{variables.version}' === 'master'
       ? `helm install {variables.prodnamedash} tigera/tigera-operator --version tigera-operator-v0.0 \\
--set-file imagePullSecrets.tigera-pull-secret=<path/to/pull/secret>,tigera-prometheus-operator.imagePullSecrets.tigera-pull-secret=<path/to/pull/secret> \\
--set-file licenseKeyContent=<path/to/license/file/yaml> \\
--namespace tigera-operator --create-namespace`
       : `helm install {variables.prodnamedash} tigera/tigera-operator --version tigera-operator-{variables.chart_version_name}.tgz \\
--set-file imagePullSecrets.tigera-pull-secret=<path/to/pull/secret>,tigera-prometheus-operator.imagePullSecrets.tigera-pull-secret=<path/to/pull/secret> \\
--set-file licenseKeyContent=<path/to/license/file/yaml> \\
--namespace tigera-operator --create-namespace`}
  </CodeBlock>

  or if you created a `values.yaml` above:

  <CodeBlock language='bash'>
     {'{variables.version}' === 'master'
       ? `helm install {variables.prodnamedash} tigera/tigera-operator --version tigera-operator-v0.0 -f values.yaml \\
--set-file imagePullSecrets.tigera-pull-secret=<path/to/pull/secret>,tigera-prometheus-operator.imagePullSecrets.tigera-pull-secret=<path/to/pull/secret> \\
--set-file licenseKeyContent=<path/to/license/file/yaml> \\
--namespace tigera-operator --create-namespace`
       : `helm install {variables.prodnamedash} tigera/tigera-operator --version tigera-operator-{variables.chart_version_name} -f values.yaml \\
--set-file imagePullSecrets.tigera-pull-secret=<path/to/pull/secret>,tigera-prometheus-operator.imagePullSecrets.tigera-pull-secret=<path/to/pull/secret> \\
--set-file licenseKeyContent=<path/to/license/file/yaml> \\
--namespace tigera-operator --create-namespace`}
  </CodeBlock>

1. You can now monitor progress with the following command:

  ```bash
  watch kubectl get tigerastatus
  ```

  Congratulations! You have now installed {variables.prodname} using the Helm 3 chart.

## Next steps

**Multicluster Management**

- [Create a {variables.prodname} management cluster](../../../multicluster/set-up-multi-cluster-management/standard-install/create-a-management-cluster.mdx)
- [Create a {variables.prodname} managed cluster](../../../multicluster/set-up-multi-cluster-management/standard-install/create-a-managed-cluster.mdx)

**Recommended**

- [Configure access to {variables.prodname} Manager UI](../../../operations/cnx/access-the-manager.mdx)
- [Authentication quickstart](../../../operations/cnx/authentication-quickstart.mdx)
- [Configure your own identity provider](../../../operations/cnx/configure-identity-provider.mdx)

**Recommended - Networking**

- The default networking is IP in IP encapsulation using BGP routing. For all networking options, see [Determine best networking option](../../../networking/determine-best-networking.mdx).

**Recommended - Security**

- [Get started with {variables.prodname} tiered network policy](../../../network-policy/policy-tiers/tiered-policy.mdx)
